--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Flask==1.1.1
 imutils==0.5.4
 matplotlib==3.1.2
 numpy
-opencv_python==4.5.4.58
 Pillow==8.4.0
 protobuf==3.19.1
 PySimpleGUI==4.55.1
+argparse
+scikit-learn
+opencv_python==4.5.4.58
